--- a/themes/chan/source/styles/variables.styl
+++ b/themes/chan/source/styles/variables.styl
@@ -7,9 +7,9 @@ color-link-hover = #2ca831
 color-link-sidebar = #cfe3cb;
 
 // Fonts
-font-sans = "微软雅黑", "黑体", "Helvetica Neue", Helvetica, Arial, sans-serif
-font-serif = "宋体", Georgia, "Times New Roman", serif
-font-mono = "新宋","Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace
+font-sans = "メイリオ", "Helvetica Neue", Helvetica, Arial, sans-serif
+font-serif = "メイリオ", Georgia, "Times New Roman", serif
+font-mono = "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace, "メイリオ"
 font-size = 14px
 line-height = 1.6em
 
