Write hilight js

--- a/themes/ingenuousn/layout/_partial/head.ejs
+++ b/themes/ingenuousn/layout/_partial/head.ejs
@@ -42,4 +42,6 @@
   <link href='//fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
   <%- css('css/style') %>
   <%- partial('google-analytics') %>
+  <link rel="stylesheet" href="//cdn.bootcss.com/highlight.js/9.6.0/styles/github.min.css">
+  <script src="//cdn.bootcss.com/highlight.js/9.6.0/highlight.min.js"></script>
 </head>
